--- a/SelfStart/SelfStartFrontEnd/app/templates/components/book-appointment.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/book-appointment.hbs
@@ -1,5 +1,6 @@
 <link integrity="" rel="stylesheet" href="{{rootURL}}assets/css/form-style.css"> <!-- Resource style -->
-
+<br><br><br><br><br><br>
+{{#if isEditing}}
 <form class="cd-form floating-labels" {{action "save" on="submit"}}>
   <br><br>
   <fieldset>
@@ -37,6 +38,14 @@
       <div class="cd-button">
         <input type="submit" value="Submit">
       </div>
+
+      <button class="ui fluid negative button" {{action "cancelbookingappointment"}}>Cancel</button>
     </div>
   </fieldset>
 </form>
+{{else}}
+  <button class="ui button" {{action 'bookAppointment'}}>
+    Book appointment
+  </button>
+
+{{/if}}
