--- a/SelfStart/SelfStartFrontEnd/app/templates/components/view-appointment.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/view-appointment.hbs
@@ -10,10 +10,10 @@
       <label class="cd-label">Select Client</label>
       <p class="cd-select icon">
         <select class="people" value ={{selectclient}} onchange={{action "updateValue" value="target.value"}} >
-          <option value=""  selected disabled hidden>Select Physiotherapist</option>
+          <option value=""  selected disabled hidden>Select patient</option>
           {{#each getclient as |client|}}
             <option value={{client.id}}>
-              {{getclient.familyName}} {{getclient.givenName}}
+              {{client.familyName}}
             </option>
           {{/each}}
         </select>
