--- a/SelfStart/SelfStartFrontEnd/app/templates/login.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/login.hbs
@@ -1,7 +1,6 @@
-<div class="row">
-    <div class="col-sm-6 col-sm-offset-3">
-        {{login-form credentials=credentials action='authenticate'}}
-    </div>
+<div id="content">
+    {{user-login}}    
+    {{!-- {{physio-account}} --}}
 </div>
 
 {{outlet}}
