--- a/SelfStart/SelfStartFrontEnd/app/templates/components/view-schedule.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/view-schedule.hbs
@@ -24,6 +24,71 @@
       {{/each}}
     </fieldset>
   </form>
+
+
+  <div class="cd-schedule">
+    <div class="timeline">
+      <ul>
+        <li><span>09:00</span></li>
+        <li><span>09:30</span></li>
+        <li><span>10:00</span></li>
+        <li><span>10:30</span></li>
+        <li><span>11:00</span></li>
+        <li><span>11:30</span></li>
+        <li><span>12:00</span></li>
+        <li><span>12:30</span></li>
+        <li><span>13:00</span></li>
+        <li><span>13:30</span></li>
+        <li><span>14:00</span></li>
+        <li><span>14:30</span></li>
+        <li><span>15:00</span></li>
+        <li><span>15:30</span></li>
+        <li><span>16:00</span></li>
+        <li><span>16:30</span></li>
+        <li><span>17:00</span></li>
+        <li><span>17:30</span></li>
+        <li><span>18:00</span></li>
+      </ul>
+    </div>
+    <div class="events">
+      <ul>
+
+        {{#each weekdate as |date|}}
+          <li class="events-group">
+            <div class="top-info"><span>{{date}}</span></div>
+
+            <ul>
+              <li class="single-event" data-start="09:30" data-end="10:30" data-content="event-abs-circuit" data-event="event-1">
+                <a href="#0">
+                  <em class="event-name">Abs Circuit</em>
+                </a>
+              </li>
+            </ul>
+          </li>
+        {{/each}}
+
+
+      </ul>
+    </div>
+
+    <div class="event-modal">
+      <header class="header">
+        <div class="content">
+          <span class="event-date"></span>
+          <h3 class="event-name"></h3>
+        </div>
+
+        <div class="header-bg"></div>
+      </header>
+
+      <div class="body">
+        <div class="event-info"></div>
+        <div class="body-bg"></div>
+      </div>
+
+      <a href="#0" class="close">Close</a>
+    </div>
+  </div>
 {{else}}
   <button class="ui button" {{action 'viewschedule'}}>
     View schedule (physio)
