update server.js for auth for modularity

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/user-login.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/user-login.hbs
@@ -16,6 +16,7 @@
 
         <div class = "inline">
             <button class="ui button" type="submit" {{action "submit"}}>Submit</button>
+            <button class="ui button" type="submit" {{action "logout"}}>Logout</button>
         </div>
 
     </form>
