--- a/SelfStart/SelfStartFrontEnd/app/templates/components/show-patient.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/show-patient.hbs
@@ -62,13 +62,23 @@
       </div>
     </div>
     <div class="ten wide column">
-      <div class="ui raised very padded text segment">
-        <div class="item">
-          <div class="middle aligned content">
-            <p style="font-weight: bold;">History:</p>
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+      <div class="fourteen wide row">
+        <div class="ui raised very padded text segment">
+          <div class="item">
+            <div class="middle aligned content">
+              <p style="font-weight: bold;">History:</p>
+              <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            </div>
           </div>
         </div>
+      </div>
+      <br>
+      <div class="two wide row" style="float: right">
+
+        <a href="/patient-file"  id="client" class="ui inverted download button" >
+          Client's file <i class="right arrow icon"></i>
+        </a>
+
       </div>
     </div>
   </div>
