--- a/SelfStart/SelfStartFrontEnd/public/assets/css/form-style.css
+++ b/SelfStart/SelfStartFrontEnd/public/assets/css/form-style.css
@@ -31,8 +31,9 @@ Form
 .cd-form {
   width: 90%;
   max-width: 600px;
-  margin: 4em auto;
+  margin: 4em 14em 0em;
 }
+
 .cd-form::after {
   clear: both;
   content: "";
@@ -73,7 +74,7 @@ Form
 .cd-form select,
 .cd-form legend {
   display: block;
-  width: 100%;
+  width: 60%;
   -webkit-appearance: none;
   -moz-appearance: none;
   -ms-appearance: none;
@@ -86,7 +87,7 @@ Form
 .cd-form textarea,
 .cd-form select {
   /* general style for input elements */
-  padding: 12px;
+  padding: 10px;
   border: 1px solid #cfd9db;
   background-color: #ffffff;
   border-radius: .25em;
@@ -111,8 +112,8 @@ Form
   content: '';
   position: absolute;
   z-index: 1;
-  right: 16px;
-  top: 50%;
+  right: 260px;
+  top: 55%;
   margin-top: -8px;
   display: block;
   width: 16px;
@@ -300,7 +301,7 @@ Form
   .cd-form input[type="date"],
   .cd-form textarea,
   .cd-form select {
-    padding: 16px;
+    padding: 10px;
   }
 }
 
@@ -345,88 +346,90 @@ Custom icons
   padding-left: 54px !important;
 }
 .cd-form .user {
-  background: url('/assets/images/form/cd-icon-user.svg') no-repeat 16px center;
+  background: url('/assets/images/form/cd-icon-user.svg') no-repeat 12px 8px;
 }
 .cd-form [required].user {
-  background: url('/assets/images/form/cd-icon-user.svg') no-repeat 16px center, url('/assets/images/form/cd-required.svg') no-repeat top right;
+  background: url('/assets/images/form/cd-icon-user.svg') no-repeat 12px 8px, url('/assets/images/form/cd-required.svg') no-repeat top right;
 }
 
 .cd-form .lock {
-  background: url('/assets/images/form/lock.svg') no-repeat 16px center;
+  background: url('/assets/images/form/lock.svg') no-repeat 12px 8px;
 }
 .cd-form [required].lock {
-  background: url('/assets/images/form/lock.svg') no-repeat 16px center, url('/assets/images/form/cd-required.svg') no-repeat top right;
+  background: url('/assets/images/form/lock.svg') no-repeat 12px 8px, url('/assets/images/form/cd-required.svg') no-repeat top right;
 }
 
 .cd-form .company {
-  background: url('/assets/images/form/cd-icon-company.svg') no-repeat 16px center;
+  background: url('/assets/images/form/cd-icon-company.svg') no-repeat 12px 8px;
 }
 .cd-form [required].company {
-  background: url('/assets/images/form/cd-icon-company.svg') no-repeat 16px center, url('/assets/images/form/cd-required.svg') no-repeat top right;
+  background: url('/assets/images/form/cd-icon-company.svg') no-repeat 12px 8px, url('/assets/images/form/cd-required.svg') no-repeat top right;
 }
 .cd-form .email {
-  background: url('/assets/images/form/cd-icon-email.svg') no-repeat 16px center;
+  background: url('/assets/images/form/cd-icon-email.svg') no-repeat 12px 8px;
 }
 .cd-form [required].email {
-  background: url('/assets/images/form/cd-icon-email.svg') no-repeat 16px center, url('/assets/images/form/cd-required.svg') no-repeat top right;
+  background: url('/assets/images/form/cd-icon-email.svg') no-repeat 12px 8px, url('/assets/images/form/cd-required.svg') no-repeat top right;
 }
 .cd-form .budget {
-  background: url('/assets/images/form/cd-icon-budget.svg') no-repeat 16px center;
+  background: url('/assets/images/form/cd-icon-budget.svg') no-repeat 12px 8px;
+}
+.cd-form [required].budget {
+  background: url('/assets/images/form/cd-icon-budget.svg') no-repeat 12px 8px, url('/assets/images/form/cd-required.svg') no-repeat top right;
 }
 .cd-form .message {
-  background: url('/assets/images/form/cd-icon-message.svg') no-repeat 16px 16px;
+  background: url('/assets/images/form/cd-icon-message.svg') no-repeat 12px 8px;
 }
 .cd-form [required].message {
-  background: url('/assets/images/form/cd-icon-message.svg') no-repeat 16px 16px, url('/assets/images/form/cd-required.svg') no-repeat top right;
+  background: url('/assets/images/form/cd-icon-message.svg') no-repeat 12px 8px, url('/assets/images/form/cd-required.svg') no-repeat top right;
 }
 .cd-form .date {
-  background: url('/assets/images/form/calendar-60.svg') no-repeat 16px 16px;
+  background: url('/assets/images/form/calendar-60.svg') no-repeat 12px 8px;
 }
 .cd-form [required].date {
-  background: url('/assets/images/form/calendar-60.svg') no-repeat 16px 16px, url('/assets/images/form/cd-required.svg') no-repeat top right;
+  background: url('/assets/images/form/calendar-60.svg') no-repeat 12px 8px, url('/assets/images/form/cd-required.svg') no-repeat top right;
 }
 .cd-form .card {
-  background: url('/assets/images/form/badge-13.svg') no-repeat 16px 16px;
+  background: url('/assets/images/form/badge-13.svg') no-repeat 12px 8px;
 }
 .cd-form [required].card {
-  background: url('/assets/images/form/badge-13.svg') no-repeat 16px 16px, url('/assets/images/form/cd-required.svg') no-repeat top right;
+  background: url('/assets/images/form/badge-13.svg') no-repeat 12px 8px, url('/assets/images/form/cd-required.svg') no-repeat top right;
 }
 .cd-form .home {
-  background: url('/assets/images/form/home-52.svg') no-repeat 16px 16px;
+  background: url('/assets/images/form/home-52.svg') no-repeat 12px 8px;
 }
 .cd-form [required].home {
-  background: url('/assets/images/form/home-52.svg') no-repeat 16px 16px, url('/assets/images/form/cd-required.svg') no-repeat top right;
+  background: url('/assets/images/form/home-52.svg') no-repeat 12px 8px, url('/assets/images/form/cd-required.svg') no-repeat top right;
 }
 .cd-form .bookmark {
-  background: url('/assets/images/form/bookmark-2.svg') no-repeat 16px 16px;
+  background: url('/assets/images/form/bookmark-2.svg') no-repeat 12px 8px;
 }
 .cd-form [required].bookmark {
-  background: url('/assets/images/form/bookmark-2.svg') no-repeat 16px 16px, url('/assets/images/form/cd-required.svg') no-repeat top right;
+  background: url('/assets/images/form/bookmark-2.svg') no-repeat 12px 8px, url('/assets/images/form/cd-required.svg') no-repeat top right;
 }
 .cd-form .flag {
-  background: url('/assets/images/form/flag-points-32.svg') no-repeat 16px 16px;
+  background: url('/assets/images/form/flag-points-32.svg') no-repeat 12px 8px;
 }
 .cd-form [required].flag {
-  background: url('/assets/images/form/flag-points-32.svg') no-repeat 16px 16px, url('/assets/images/form/cd-required.svg') no-repeat top right;
+  background: url('/assets/images/form/flag-points-32.svg') no-repeat 12px 8px, url('/assets/images/form/cd-required.svg') no-repeat top right;
 }
 .cd-form .phone {
-  background: url('/assets/images/form/phone-2.svg') no-repeat 16px 16px;
+  background: url('/assets/images/form/phone-2.svg') no-repeat 12px 8px;
 }
 .cd-form [required].phone {
-  background: url('/assets/images/form/phone-2.svg') no-repeat 16px 16px, url('/assets/images/form/cd-required.svg') no-repeat top right;
+  background: url('/assets/images/form/phone-2.svg') no-repeat 12px 8px, url('/assets/images/form/cd-required.svg') no-repeat top right;
 }
 .cd-form .world {
-  background: url('/assets/images/form/world.svg') no-repeat 16px 16px;
+  background: url('/assets/images/form/world.svg') no-repeat 12px 8px;
 }
 .cd-form [required].world {
-  background: url('/assets/images/form/world.svg') no-repeat 16px 16px, url('/assets/images/form/cd-required.svg') no-repeat top right;
+  background: url('/assets/images/form/world.svg') no-repeat 12px 8px, url('/assets/images/form/cd-required.svg') no-repeat top right;
 }
-
 .cd-form .people {
-  background: url('/assets/images/form/multiple-11.svg') no-repeat 16px 16px;
+  background: url('/assets/images/form/multiple-11.svg') no-repeat 12px 8px;
 }
 .cd-form [required].people {
-  background: url('/assets/images/form/multiple-11.svg') no-repeat 16px 16px, url('/assets/images/form/cd-required.svg') no-repeat top right;
+  background: url('/assets/images/form/multiple-11.svg') no-repeat 12px 8px, url('/assets/images/form/cd-required.svg') no-repeat top right;
 }
 
 
