--- a/SelfStart/SelfStartFrontEnd/app/templates/components/edit-patient.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/edit-patient.hbs
@@ -1,101 +1,124 @@
-<link integrity="" rel="stylesheet" href="{{rootURL}}../assets/css/form-style.css"> <!-- Resource style -->
-
-<form class="cd-form floating-labels" {{action "save" on="submit"}}>
-  <fieldset>
-    <legend>Personal Info</legend>
-
-    <div class="icon">
-      <label class="cd-label">First Name</label>
-      {{input class="" type="text" value = pateintsData.givenName required = true}}
-    </div>
-    <div class="icon">
-      <label class="cd-label">Last Name</label>
-      {{input class="" type="text" value = pateintsData.familyName required = true}}
-    </div>
-    <div class="icon">
-      <label class="cd-label">Date of Birth</label>
-      <input class="date" type="date" value= {{selectedDate}}  onchange={{action 'assignDate' value="target.value"}} required>
-    </div>
-
-    <div >
-      <h4>Gender</h4>
-      <p class="cd-select icon">
-        <select class="people" onchange={{action 'selectGender' value="target.value"}}>
-          {{#each genderModel as |oneGender|}}
-            <option value={{oneGender.name}} selected={{eq pateintsData.gender oneGender.name}}>
-              {{oneGender.name}}
-            </option>
-          {{/each}}
-        </select>
-      </p>
-    </div>
+<p style="cursor: pointer; " title="Edit"  {{action 'openModal' }}>
+  <img src="assets/images/pencil.svg">
+</p>
 
 
-    <div class="icon">
-      <label class="cd-label">Health Card Number</label>
-      {{input class="card" type="text" value = pateintsData.healthCardNumber required = true}}
-    </div>
-  </fieldset>
+{{#ui-modal name=modalName class=modalName }}
+  <i class="close icon"></i>
+  <link integrity="" rel="stylesheet" href="{{rootURL}}../assets/css/form-style.css"> <!-- Resource style -->
 
 
-  <fieldset>
-    <legend>Address</legend>
+  <div class="header">Edit Client</div>
+    <div class="scrolling content" >
 
-    <div class="icon">
-      <label class="cd-label">Number</label>
-      {{input class="home" type="text" value = pateintsData.streetNumber required = true}}
-    </div>
-    <div class="icon">
-      <label class="cd-label">Street Name</label>
-      {{input class="home" type="text" value = pateintsData.streetName required = true}}
-    </div>
-    <div class="icon">
-      <label class="cd-label" for="cd-name">Unit</label>
-      {{input class="bookmark" type="text" value = pateintsData.apartment}}
-    </div>
+  <form id="edit" class="cd-form floating-labels" {{action "save" on="submit"}}>
+    <fieldset>
+      <legend>Personal Info</legend>
 
-    <div class="icon">
-      <label class="cd-label" for="cd-name">Postal/ZIP Code</label>
-      {{input class="flag" type="text" value = pateintsData.postalCode required = true}}
-    </div>
-
-
-    <div >
-      <h4>Country</h4>
-      <p class="cd-select icon">
-        <select class="world" onchange={{action 'selectCountry' value="target.value"}}>
-          {{#each conutryModel as |oneCountry|}}
-            <option value={{oneCountry.name}} selected={{eq pateintsData.country oneCountry.name}}>
-              {{oneCountry.name}}
-            </option>
-          {{/each}}
-        </select>
-      </p>
-    </div>
-
-  </fieldset>
-
-
-  <fieldset>
-    <legend>Contact Info</legend>
-
-    <div class="icon">
-      <label class="cd-label" for="cd-name">Phone Number</label>
-      {{input class="phone" type="text" value = pateintsData.phoneNumber required = true}}
-    </div>
-
-    <div class="icon">
-      <label class="cd-label" for="cd-email">Email</label>
-      {{input class="email" type="email" value = pateintsData.email required = true}}
-    </div>
-  </fieldset>
-
-  <fieldset>
-
-    <div>
-      <div class="cd-button">
-        <input type="submit" value="Submit">
+      <div class="icon">
+        <label class="cd-label">First Name</label>
+        {{input class="" type="text" value = pateintsData.givenName required = true}}
       </div>
+      <div class="icon">
+        <label class="cd-label">Last Name</label>
+        {{input class="" type="text" value = pateintsData.familyName required = true}}
+      </div>
+      <div class="icon">
+        <label class="cd-label">Date of Birth</label>
+        <input class="date" type="date" value= {{selectedDate}}  onchange={{action 'assignDate' value="target.value"}} required>
+      </div>
+
+      <div >
+        <h4>Gender</h4>
+        <p class="cd-select icon">
+          <select class="people" onchange={{action 'selectGender' value="target.value"}}>
+            {{#each genderModel as |oneGender|}}
+              <option value={{oneGender.name}} selected={{eq pateintsData.gender oneGender.name}}>
+                {{oneGender.name}}
+              </option>
+            {{/each}}
+          </select>
+        </p>
+      </div>
+
+
+      <div class="icon">
+        <label class="cd-label">Health Card Number</label>
+        {{input class="card" type="text" value = pateintsData.healthCardNumber required = true}}
+      </div>
+    </fieldset>
+
+
+    <fieldset>
+      <legend>Address</legend>
+
+      <div class="icon">
+        <label class="cd-label">Number</label>
+        {{input class="home" type="text" value = pateintsData.streetNumber required = true}}
+      </div>
+      <div class="icon">
+        <label class="cd-label">Street Name</label>
+        {{input class="home" type="text" value = pateintsData.streetName required = true}}
+      </div>
+      <div class="icon">
+        <label class="cd-label" for="cd-name">Unit</label>
+        {{input class="bookmark" type="text" value = pateintsData.apartment}}
+      </div>
+
+      <div class="icon">
+        <label class="cd-label" for="cd-name">Postal/ZIP Code</label>
+        {{input class="flag" type="text" value = pateintsData.postalCode required = true}}
+      </div>
+
+
+      <div >
+        <h4>Country</h4>
+        <p class="cd-select icon">
+          <select class="world" onchange={{action 'selectCountry' value="target.value"}}>
+            {{#each conutryModel as |oneCountry|}}
+              <option value={{oneCountry.name}} selected={{eq pateintsData.country oneCountry.name}}>
+                {{oneCountry.name}}
+              </option>
+            {{/each}}
+          </select>
+        </p>
+      </div>
+
+    </fieldset>
+
+
+    <fieldset>
+      <legend>Contact Info</legend>
+
+      <div class="icon">
+        <label class="cd-label" for="cd-name">Phone Number</label>
+        {{input class="phone" type="text" value = pateintsData.phoneNumber required = true}}
+      </div>
+
+      <div class="icon">
+        <label class="cd-label" for="cd-email">Email</label>
+        {{input class="email" type="email" value = pateintsData.email required = true}}
+      </div>
+
+            <!--<div class="ok cd-button">-->
+        <!--<input type="submit" value="Submit">-->
+      <!--</div>-->
+    </fieldset>
+
+  </form>
+
+
+      <!--<div class="actions">-->
+        <!--<div class="ok cd-button">-->
+          <!--<input type="submit" value="Submit">-->
+        <!--</div>-->
+      <!--</div>-->
+  </div>
+
+  <div class="actions" style="height: 75px">
+    <div class="ui primary approve button" style="float: right;">
+      Submit
     </div>
-  </fieldset>
-</form>
+  </div>
+
+{{/ui-modal}}
