--- a/SelfStart/SelfStartFrontEnd/app/templates/components/manage-patients.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/manage-patients.hbs
@@ -1,110 +1,82 @@
-<div class="title">
-  Clients
-  <div class="container" style="float: right;">
-    {{#link-to "new-patient"}}
-      <a id="add" class="round-button">
-        <i class="plus icon"></i>
-      </a>
-    {{/link-to}}
+<div class="masthead segment bg2">
+  <div class="ui container">
+    <div class="introduction">
+      <h1 class="ui inverted header">
+        <span class="tagline">
+           Client Profiles
+        </span>
+      </h1>
+      <div class="ui hidden divider"></div>
+      <div style="padding-left: 400px">
+        <a href="/new-patient"  class="ui large inverted download button" >
+          Add Client
+        </a>
+      </div>
+
+    </div>
   </div>
 </div>
+
+
+
+
+
+
 
 <div class="background">
 
   <br><br>
-  <div class="ui fluid container" style="width: 90%;">
-    <div class="ui form" >
-      <div class="two fields" >
+  <div class="ui segment" style="margin-left: 5%; margin-right: 5%">
+    <div class="ui left aligned seven wide column">
+      <div class="ui form" >
+        <div class="two fields" >
 
-        <div class="field">
-          {{#ui-dropdown class="selection" onChange=(action (mut queryPath))}}
-            <div class="default text">{{modelAttributes.firstObject.name}}</div>
-            <i class="dropdown icon"></i>
-            <div class="menu">
-              {{#each modelAttributes as |attribute|}}
-                <div class="item" data-value="{{attribute.key}}">
-                  {{attribute.name}}
-                </div>
-              {{/each}}
+          <div class="field">
+            {{#ui-dropdown class="selection" selected=queryPath onChange=(action (mut queryPath))}}
+              <div class="default text">{{modelAttributes.firstObject.name}}</div>
+              <i class="dropdown icon"></i>
+              <div class="menu">
+                {{#each modelAttributes as |attribute|}}
+                  <div class="item" data-value="{{attribute.key}}">
+                    {{attribute.name}}
+                  </div>
+                {{/each}}
+              </div>
+            {{/ui-dropdown}}
+          </div>
+
+          <div class="field">
+            <div class="ui icon input">
+              <i class="search icon"></i>
+              {{input type="text" placeholder="Search..."  value=query }}
             </div>
-          {{/ui-dropdown}}
-        </div>
-
-        <div class="field">
-          <div class="ui icon input">
-            <i class="search icon"></i>
-            {{input type="text" placeholder="Search..."  value=query }}
           </div>
         </div>
       </div>
     </div>
 
 
-
   <div style="display: inline">
-    <table class="ui table">
+    <table class="ui fixed table">
       <thead >
       <tr>
         <th class="left aligned one wide column "> Avatar </th>
-        <th class="left aligned collapsing two wide column"{{action 'sortColumn' 'givenName' givenNameDir}}>First Name
-          {{#if (eq givenNameDir 'asc')}}
-            <i class="sort descending icon"></i>
-          {{/if}}
-          {{#if (eq givenNameDir 'desc')}}
-            <i class="sort ascending icon"></i>
-          {{/if}}
-          {{#if (eq givenNameDir '')}}
-            <i class="sort icon"></i>
-          {{/if}}
-        </th>
-        <th class="left aligned collapsing three wide  column"{{action 'sortColumn' 'familyName' familyNameDir}}>Last Name
-          {{#if (eq familyNameDir 'asc')}}
-            <i class="sort descending icon"></i>
-          {{/if}}
-          {{#if (eq familyNameDir 'desc')}}
-            <i class="sort ascending icon"></i>
-          {{/if}}
-          {{#if (eq familyNameDir '')}}
-            <i class="sort icon"></i>
-          {{/if}}
-        </th>
+        {{#each modelAttributes as |column|}}
+          <th class={{column.class}} {{action 'sortColumn' column.key column.dir}}>{{column.name}}
+            {{#if (eq column.dir 'asc')}}
+              <i class="sort ascending icon"></i>
+            {{/if}}
+            {{#if (eq column.dir 'desc')}}
+              <i class="sort descending icon"></i>
+            {{/if}}
+            {{#if (eq column.dir '')}}
+              <i class="sort icon"></i>
+            {{/if}}
+          </th>
+        {{/each}}
 
-        <th class="left aligned collapsing three wide  column"{{action 'sortColumn' 'address' addressDir}}>Address
-        {{#if (eq addressDir 'asc')}}
-          <i class="sort descending icon"></i>
-        {{/if}}
-        {{#if (eq addressDir 'desc')}}
-          <i class="sort ascending icon"></i>
-        {{/if}}
-        {{#if (eq addressDir '')}}
-          <i class="sort icon"></i>
-        {{/if}}
-      </th>
-
-        <th class="left aligned collapsing three wide  column"{{action 'sortColumn' 'email' emailDir}}>Email
-          {{#if (eq emailDir 'asc')}}
-            <i class="sort descending icon"></i>
-          {{/if}}
-          {{#if (eq emailDir 'desc')}}
-            <i class="sort ascending icon"></i>
-          {{/if}}
-          {{#if (eq emailDir '')}}
-            <i class="sort icon"></i>
-          {{/if}}
-        </th>
-        <th class="left aligned collapsing two wide  column"{{action 'sortColumn' 'phoneNumber' phoneNumberDir}}>Phone Number
-          {{#if (eq phoneNumberDir 'asc')}}
-            <i class="sort descending icon"></i>
-          {{/if}}
-          {{#if (eq phoneNumberDir 'desc')}}
-            <i class="sort ascending icon"></i>
-          {{/if}}
-          {{#if (eq phoneNumberDir '')}}
-            <i class="sort icon"></i>
-          {{/if}}
-        </th>
-
-        <th class="center aligned collapsing two wide column">Actions</th>
+        <th class="right aligned one wide  column">Actions</th>
+        <th class="left aligned one wide  column"></th>
 
       </tr>
       </thead>
@@ -116,45 +88,26 @@
 
 
   <div  id="myWindow" style="height:600px;overflow-y: scroll; overflow-x: hidden;">
-    <table class="ui single line table" id="tb" >
-      {{!--    <tfoot>    <tr>
-        <th colspan="8">
-          <div class="ui right floated pagination menu">
-            <a class="icon item">
-              <i class="left chevron icon" {{action "loadPrevious"}}></i>
-            </a>
-            <a class="item">1</a>
-            <a class="item">2</a>
-            <a class="item">3</a>
-            <a class="item">4</a>
-            <a class="icon item">
-              <i class="right chevron icon" {{action "loadNext"}}></i>
-            </a>
-          </div>
-        </th>
-      </tr>
-      </tfoot>
-  --}}
-
+    <table class="ui fixed table" id="tb" >
       <tbody >
       {{#each patientsModel as |patient|}}
-        <tr >
+
+        <tr>
           <td class="left aligned one wide column ">
             <img src="assets/images/nav/single-01.svg" class="ui mini rounded image" {{action 'toggleDetail' patient.id}}/>
           </td>
-          <td class="left aligned two wide column " > {{patient.givenName}} </td>
-          <td class="left aligned three wide column "> {{patient.familyName}} </td>
-          <td class="left aligned three wide column "> {{patient.streetNumber}} {{patient.streetName}} </td>
-          <td class="left aligned three wide column "> {{patient.email}} </td>
-          <td class="left aligned two wide column "> {{patient.phoneNumber}} </td>
+          {{#each modelAttributes as |column|}}
 
+            {{!--{{#if (eq column.key 'dateOfBirth' )}}
+              <td class={{column.class}}>  {{dateFormat dateOfBirth}}  </td>
+            {{/if}}--}}
+
+            <td class={{column.class}}>  {{get patient column.key}}  </td>
+          {{/each}}
 
           <td class="right aligned one wide column ">
-            <p style="cursor: pointer; " {{action 'editpatient' patient.id}} title="Edit">
-              <img src="assets/images/pencil.svg">
-            </p>
+            {{edit-patient  pateintsData=patient }}
           </td>
-
           <td class="left aligned one wide column ">
             <p >{{delete-patient ID=patient.id flagDelete=flagDelete}}</p>
           </td>
@@ -167,16 +120,17 @@
                 {{show-patient model=patient}}
               {{/if}}
             {{/liquid-spacer}}
-          </th> <tr></tr>
+          </th>
+        <tr></tr>
         </tr>
 
-        <tr>
-          <th colspan="8">
-            {{#liquid-if (eq isEditing patient.id) class="editing"}}
-              {{edit-patient pateintsData=patient isEditing=isEditing}}
-            {{/liquid-if}}
-          </th>
-        </tr>
+        {{!--<tr>-->
+          <!--<th colspan="8">-->
+            <!--{{#liquid-if (eq isEditing patient.id) class="editing"}}-->
+              <!--{{edit-patient pateintsData=patient isEditing=isEditing}}-->
+            <!--{{/liquid-if}}-->
+          <!--</th>-->
+        <!--</tr>--}}
 
       {{/each}}
       </tbody>
