--- a/SelfStart/SelfStartFrontEnd/app/templates/components/edit-country.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/edit-country.hbs
@@ -18,8 +18,8 @@
   <br>
 
   <div class="actions" style="padding:0; ">
-    <div class="ui positive right" style="padding:.2em; float:left; width: 50%; cursor: pointer; background: #35a785; color:white; text-align: center;">Save<i class="checkmark icon"></i></div>
-    <div class="ui deny" style="padding:.2em; float:left; width: 50%;  cursor: pointer; background: #b6bece; color:white; text-align: center;">Cancel</div>
+    <div class="ui positive right" style="padding:1em; float:left; width: 50%; cursor: pointer; background: #35a785; color:white; text-align: center;">Save<i class="checkmark icon"></i></div>
+    <div class="ui deny" style="padding:1em; float:left; width: 50%;  cursor: pointer; background: #b6bece; color:white; text-align: center;">Cancel</div>
   </div>
 
 {{/ui-modal}}
