--- a/SelfStart/SelfStartFrontEnd/app/templates/components/welcome-page.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/welcome-page.hbs
@@ -1,6 +1,7 @@
 <!--&lt;!&ndash; PRELOADER &ndash;&gt;-->
 <!--<div id="preloader"><div><em></em><em></em><em></em><em></em></div></div>-->
 <!--&lt;!&ndash; //PRELOADER &ndash;&gt;-->
+{{#nav-bar}}
 
   <div class="masthead segment bg1">
     <div class="ui container">
@@ -64,3 +65,4 @@
 <div class="feature alternate ui stripe vertical segment">
 
 </div>
+{{/nav-bar}}
