--- a/SelfStart/SelfStartFrontEnd/app/templates/components/manage-patients.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/manage-patients.hbs
@@ -1,21 +1,23 @@
-<div class="masthead segment bg2">
-  <div class="ui container">
-    <div class="introduction">
-      <h1 class="ui inverted header">
+{{#admin-nav}}
+
+  <div class="masthead segment bg2">
+    <div class="ui container">
+      <div class="introduction">
+        <h1 class="ui inverted header">
         <span class="tagline">
            Client Profiles
         </span>
-      </h1>
-      <div class="ui hidden divider"></div>
-      <div style="padding-left: 400px">
-        <a href="/new-patient"  class="ui large inverted download button" >
-          Add Client
-        </a>
-      </div>
+        </h1>
+        <div class="ui hidden divider"></div>
+        <div style="padding-left: 400px">
+          <a href="/new-patient"  class="ui large inverted download button" >
+            Add Client
+          </a>
+        </div>
 
+      </div>
     </div>
   </div>
-</div>
 
 
 
@@ -23,121 +25,123 @@
 
 
 
-<div class="background">
+  <div class="background">
 
-  <br><br>
-  <div class="ui segment" style="margin-left: 5%; margin-right: 5%">
-    <div class="ui left aligned seven wide column">
-      <div class="ui form" >
-        <div class="two fields" >
+    <br><br>
+    <div class="ui segment" style="margin-left: 5%; margin-right: 5%">
+      <div class="ui left aligned seven wide column">
+        <div class="ui form" >
+          <div class="two fields" >
 
-          <div class="field">
-            {{#ui-dropdown class="selection" selected=queryPath onChange=(action (mut queryPath))}}
-              <div class="default text">{{modelAttributes.firstObject.name}}</div>
-              <i class="dropdown icon"></i>
-              <div class="menu">
-                {{#each modelAttributes as |attribute|}}
-                  <div class="item" data-value="{{attribute.key}}">
-                    {{attribute.name}}
-                  </div>
-                {{/each}}
+            <div class="field">
+              {{#ui-dropdown class="selection" selected=queryPath onChange=(action (mut queryPath))}}
+                <div class="default text">{{modelAttributes.firstObject.name}}</div>
+                <i class="dropdown icon"></i>
+                <div class="menu">
+                  {{#each modelAttributes as |attribute|}}
+                    <div class="item" data-value="{{attribute.key}}">
+                      {{attribute.name}}
+                    </div>
+                  {{/each}}
+                </div>
+              {{/ui-dropdown}}
+            </div>
+
+            <div class="field">
+              <div class="ui icon input">
+                <i class="search icon"></i>
+                {{input type="text" placeholder="Search..."  value=query }}
               </div>
-            {{/ui-dropdown}}
-          </div>
-
-          <div class="field">
-            <div class="ui icon input">
-              <i class="search icon"></i>
-              {{input type="text" placeholder="Search..."  value=query }}
             </div>
           </div>
         </div>
       </div>
-    </div>
 
 
-  <div style="display: inline">
-    <table class="ui fixed table">
-      <thead >
-      <tr>
-        <th class="left aligned one wide column "> Avatar </th>
-        {{#each modelAttributes as |column|}}
-          <th class={{column.class}} {{action 'sortColumn' column.key column.dir}}>{{column.name}}
-            {{#if (eq column.dir 'asc')}}
-              <i class="sort ascending icon"></i>
-            {{/if}}
-            {{#if (eq column.dir 'desc')}}
-              <i class="sort descending icon"></i>
-            {{/if}}
-            {{#if (eq column.dir '')}}
-              <i class="sort icon"></i>
-            {{/if}}
-          </th>
-        {{/each}}
+      <div style="display: inline">
+        <table class="ui fixed table">
+          <thead >
+          <tr>
+            <th class="left aligned one wide column "> </th>
+            {{#each modelAttributes as |column|}}
+              <th class={{column.class}} {{action 'sortColumn' column.key column.dir}}>{{column.name}}
+                {{#if (eq column.dir 'asc')}}
+                  <i class="sort ascending icon"></i>
+                {{/if}}
+                {{#if (eq column.dir 'desc')}}
+                  <i class="sort descending icon"></i>
+                {{/if}}
+                {{#if (eq column.dir '')}}
+                  <i class="sort icon"></i>
+                {{/if}}
+              </th>
+            {{/each}}
 
-        <th class="right aligned one wide  column">Actions</th>
-        <th class="left aligned one wide  column"></th>
+            <th class="centered aligned two wide  column">Actions</th>
+            <!--<th class="left aligned one wide  column"></th>-->
 
-      </tr>
-      </thead>
-    </table>
-  </div>
-
-
+          </tr>
+          </thead>
+        </table>
+      </div>
 
 
 
-  <div  id="myWindow" style="height:600px;overflow-y: scroll; overflow-x: hidden;">
-    <table class="ui fixed table" id="tb" >
-      <tbody >
-      {{#each patientsModel as |patient|}}
 
-        <tr>
-          <td class="left aligned one wide column ">
-            <img src="assets/images/nav/single-01.svg" class="ui mini rounded image" {{action 'toggleDetail' patient.id}}/>
-          </td>
-          {{#each modelAttributes as |column|}}
 
-            {{!--{{#if (eq column.key 'dateOfBirth' )}}
-              <td class={{column.class}}>  {{dateFormat dateOfBirth}}  </td>
-            {{/if}}--}}
+      <div  id="myWindow" style="height:600px;overflow-y: scroll; overflow-x: hidden;">
+        <table class="ui fixed table" id="tb" >
+          <tbody >
+          {{#each patientsModel as |patient|}}
 
-            <td class={{column.class}}>  {{get patient column.key}}  </td>
+            <tr>
+              <td class="left aligned one wide column ">
+                <img src="assets/images/nav/single-01.svg" class="ui mini rounded image" {{action 'toggleDetail' patient.id}}/>
+              </td>
+              {{#each modelAttributes as |column|}}
+
+              {{!--{{#if (eq column.key 'dateOfBirth' )}}
+                <td class={{column.class}}>  {{dateFormat dateOfBirth}}  </td>
+              {{/if}}--}}
+
+                <td class={{column.class}}>  {{get patient column.key}}  </td>
+              {{/each}}
+
+              <td class="right aligned one wide column ">
+                {{edit-patient  pateintsData=patient }}
+              </td>
+              <td class="left aligned one wide column ">
+                <p >{{delete-patient ID=patient.id flagDelete=flagDelete}}</p>
+              </td>
+            </tr>
+
+            <tr>
+              <th colspan="8">
+                {{#liquid-spacer growDuration=500}}
+                  {{#if (eq isShowing  patient.id)}}
+                    {{show-patient model=patient}}
+                  {{/if}}
+                {{/liquid-spacer}}
+              </th>
+            <tr></tr>
+            </tr>
+
+          {{!--<tr>-->
+            <!--<th colspan="8">-->
+              <!--{{#liquid-if (eq isEditing patient.id) class="editing"}}-->
+                <!--{{edit-patient pateintsData=patient isEditing=isEditing}}-->
+              <!--{{/liquid-if}}-->
+            <!--</th>-->
+          <!--</tr>--}}
+
           {{/each}}
-
-          <td class="right aligned one wide column ">
-            {{edit-patient  pateintsData=patient }}
-          </td>
-          <td class="left aligned one wide column ">
-            <p >{{delete-patient ID=patient.id flagDelete=flagDelete}}</p>
-          </td>
-        </tr>
-
-        <tr>
-          <th colspan="8">
-            {{#liquid-spacer growDuration=500}}
-              {{#if (eq isShowing  patient.id)}}
-                {{show-patient model=patient}}
-              {{/if}}
-            {{/liquid-spacer}}
-          </th>
-        <tr></tr>
-        </tr>
-
-        {{!--<tr>-->
-          <!--<th colspan="8">-->
-            <!--{{#liquid-if (eq isEditing patient.id) class="editing"}}-->
-              <!--{{edit-patient pateintsData=patient isEditing=isEditing}}-->
-            <!--{{/liquid-if}}-->
-          <!--</th>-->
-        <!--</tr>--}}
-
-      {{/each}}
-      </tbody>
-    </table>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </div>
-</div>
-</div>
 
 
 
+
+{{/admin-nav}}
