--- a/SelfStart/SelfStartFrontEnd/app/templates/manage-selections.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/manage-selections.hbs
@@ -1,54 +1,1 @@
-<br><br><br><br><br><br><br>
-
-<div class="ui centered cards" >
-  <div class="card" style="width:12%">
-    <div class="content">
-      <div class="header">Countries</div>
-    </div>
-    <div class="ui bottom attached button">
-      <i class="add icon"></i>
-
-      {{#link-to 'country'}}
-        Add Country
-      {{/link-to}}
-
-    </div>
-  </div>
-
-  <div class="card" style="width:12%">
-    <div class="content">
-      <div class="header">Provinces</div>
-    </div>
-    <div class="ui bottom attached button">
-      <i class="add icon"></i>
-      {{#link-to 'province'}}
-        Add Province
-      {{/link-to}}
-    </div>
-  </div>
-
-  <div class="card" style="width:12%">
-    <div class="content">
-      <div class="header">Cities</div>
-    </div>
-    <div class="ui bottom attached button">
-      <i class="add icon"></i>
-      Add City
-    </div>
-  </div>
-
-  <div class="card" style="width:12%">
-    <div class="content">
-      <div class="header">Genders</div>
-    </div>
-    <div class="ui bottom attached button">
-      <i class="add icon"></i>
-
-      {{#link-to 'gender'}}
-        Add Gender
-      {{/link-to}}
-
-    </div>
-  </div>
-
-</div>
+{{config-selection model=model}}
