--- a/SelfStart/SelfStartFrontEnd/public/assets/css/home-style.css
+++ b/SelfStart/SelfStartFrontEnd/public/assets/css/home-style.css
@@ -70,10 +70,10 @@
   background-image: url("/assets/images/home/bg_gradient1.jpg");
 }
 #example.index .masthead.bg3:after {
-  background-image: url("/images/backgrounds/3.jpg");
+  background-image: url("/assets/images/home/1920x1080-data_out_75_4169836-color-gradient-wallpaper.jpg");
 }
 #example.index .masthead.bg4:after {
-  background-image: url("/images/backgrounds/4.jpg");
+  background-image: url("/assets/images/home/bg_gradient1.jpg");
 }
 #example.index .masthead.bg5:after {
   background-image: url("/images/backgrounds/5.jpg");
@@ -108,7 +108,9 @@
 
 
 #example.index .masthead .bg1,
-#example.index .masthead .bg1:after {
+#example.index .masthead .bg1:after,
+#example.index .masthead .bg3,
+#example.index .masthead .bg3:after {
   -ms-transition:
     background 6s cubic-bezier(0.680, -0.550, 0.265, 1.4) 0s,
     opacity 6s cubic-bezier(0.680, -0.550, 0.265, 1.4) 0s
@@ -128,10 +130,10 @@
   height: 100vh;
 }
 #example.index .masthead .container {
-  height: 90vh;
+  height: 100vh;
   margin-left: auto !important;
   margin-right: auto !important;
-  min-height: 90vh;
+  min-height: 100vh;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
@@ -146,10 +148,16 @@
   justify-content: center;
 }
 #example .masthead.bg1 .container {
-  padding: 15rem 0em;
+  padding: 13rem 0em;
 }
 #example .masthead.bg2 .container {
   padding: 5rem 0em;
+}
+#example .masthead.bg3 .container {
+  padding: 16rem 0em;
+}
+#example .masthead.bg4 .container {
+  padding: 6rem 0em;
 }
 #example.index .following.bar iframe.github {
   margin-top: 0px;
