--- a/SelfStart/SelfStartFrontEnd/app/templates/components/display-questions.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/display-questions.hbs
@@ -1,26 +1,28 @@
 <script type="text/javascript">$(document).ready(function(){$(".rating").rating();});</script>
 
 <div class="ui form">
+<ol>
 {{#each formModel.questions as |q|}}
     <br>
     {{#if q.sa}}
         <label>{{q.questionText}}</label>
         <br><br>
         <div class="ui input focus">
-            <input  type="text">
+            <li>{{input type="text" value = the }}</li>
         </div>
     {{/if}}
 
     {{#if q.ra}}
         <label>{{q.questionText}}</label>
         <br><br>
-        <div class="ui large heart rating" data-max-rating="10"></div>
+         <li><div class="ui large heart rating" data-max-rating="10"></div></li>
     {{/if}}
 
     {{#if q.tf}}
     <br><br>
+     <li>
         <div class="inline fields">
-          <label>{{q.questionText}}</label>
+           <label>{{q.questionText}}</label>
           <div class="field">
             <div class="ui radio checkbox">
                 <input name="tf" type="radio">
@@ -34,6 +36,7 @@
             </div>
           </div>
         </div>
+      </li>  
     {{/if}}
 
     {{#if q.mc}}
@@ -84,6 +87,7 @@
           {{/if}}
         </div>
     {{/if}}
-
 {{/each}}
+</ol>
 </div>
+<button {{action 'Submit'}}>Submit</button>
