--- a/SelfStart/SelfStartFrontEnd/app/templates/components/admin-nav.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/admin-nav.hbs
@@ -26,7 +26,7 @@
 
           <div class="right menu inverted">
             <a href="../patients" class="item">Clients</a>
-            <a class="item">Exercise</a>
+            <a  href="../exercises"class="item">Exercise</a>
             <a class="item">Forms</a>
             <a href="../manage-selections" class="item">Configure</a>
             <a class="item">Appointments</a>
