--- a/SelfStart/SelfStartFrontEnd/app/templates/components/nav-bar.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/nav-bar.hbs
@@ -24,6 +24,7 @@
               </div>
             </div>
 
+
             <div class="right menu inverted">
               <a class="item">About</a>
               <a class="item">How it Works</a>
@@ -31,7 +32,11 @@
               <a class="item">Assessment</a>
               <a class="item">Blog</a>
               <a class="item">Contact</a>
-              <a id="login" class="item">Log in</a>
+              {{#if loggedOut}}
+                <a id="login" class="item" {{action 'openModal'}}>Log in</a>
+              {{else}}
+                <a class="item" {{action "logout"}}>Logout</a>
+                {{/if}}
             </div>
           </div>
         </div>
@@ -41,3 +46,31 @@
 
     </div>
   </div>
+
+
+{{#ui-modal name="login" class="login"}}
+  <link integrity="" rel="stylesheet" href="{{rootURL}}../assets/css/form-style.css"> <!-- Resource style -->
+
+  <h2 class="ui fluid centered header">Login</h2>
+
+  <div id="ui container" style="height: 250px; padding-left:10%; padding-right: 10%; padding-top: 2%">
+    <form class="ui form">
+
+      <div class="field">
+        <label>Email</label>
+        {{input type ="text" value=Email placeholder="Email"}}
+      </div>
+
+      <div class="field">
+        <label>Password</label>
+        {{input type ="password" value=PWord placeholder="Password"}}
+      </div>
+
+      <div class = "inline">
+        <button class="ui green button " {{action "submit"}}>Submit</button>
+        <button class="ui button " {{action "deny"}}>Cancel</button>
+      </div>
+
+    </form>
+  </div>
+{{/ui-modal}}
