--- a/SelfStart/SelfStartFrontEnd/app/templates/components/welcome-page.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/welcome-page.hbs
@@ -14,12 +14,15 @@
         </h1>
         <div class="ui hidden divider"></div>
         <div class="ui hidden divider"></div>
-        <div style="padding-left: 285px">
+        <div style="padding-left: 322px">
 
-          <a href="/appointment"  class="ui large inverted download button" >
-            Book Appointment
-          </a>
 
+
+          {{register-user}}
+
+          <!--<a href="/appointment"  class="ui large inverted download button" >-->
+            <!--Book Appointment-->
+          <!--</a>-->
           <a href="/#"  class="ui large inverted basic button" >Ask a Physio</a>
         </div>
 
