Appointments is merged

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/admin-nav.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/admin-nav.hbs
@@ -10,6 +10,7 @@
 
 <div id="example" class="index pushable">
 
+
   <div class="full height">
     <div class="following bar">
       <div class="ui container">
@@ -28,9 +29,9 @@
           <div class="right menu inverted">
             <a href="../patients" class="item">Clients</a>
             <a  href="../exercises"class="item">Exercise</a>
-            <a class="item">Forms</a>
+            <a href="../forms" class="item">Forms</a>
             <a href="../manage-selections" class="item">Configure</a>
-            <a class="item">Appointments</a>
+            <a href="../appointment" class="item">Appointments</a>
             <a id="login" href="../" class="item">Log out</a>
           </div>
         </div>
