--- a/SelfStart/SelfStartFrontEnd/app/templates/components/show-patient.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/show-patient.hbs
@@ -1,10 +1,10 @@
 <div class="ui horizontal segment items">
   <div class = "ui grid">
-    <div class="six wide column">
+    <div class="eight wide column">
       <div class="ui raised very padded text segment">
         <div class="ui grid">
 
-          <div class="eight wide column" style="padding-left: 50px">
+          <div class="six wide column" >
             <br><br>
             <div class="item">
               <div class="middle aligned content">
@@ -61,7 +61,7 @@
         </div>
       </div>
     </div>
-    <div class="ten wide column">
+    <div class="eight wide column">
       <div class="fourteen wide row">
         <div class="ui raised very padded text segment">
           <div class="item">
