--- a/SelfStart/SelfStartFrontEnd/app/templates/components/add-patient.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/add-patient.hbs
@@ -1,4 +1,4 @@
-{{#nav-bar}}
+{{#admin-nav}}
 
   <div class="masthead segment bg2">
     <div class="ui container">
@@ -143,4 +143,4 @@
       </form>
     </div>
   </div>
-{{/nav-bar}}
+{{/admin-nav}}
