--- a/SelfStart/SelfStartFrontEnd/app/templates/components/admin-nav.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/admin-nav.hbs
@@ -30,6 +30,7 @@
             <a href="../patients" class="item">Clients</a>
             <a  href="../exercises"class="item">Exercise</a>
             <a href="../forms" class="item">Forms</a>
+            <a href="../questions" class="item">Questions</a>
             <a href="../manage-selections" class="item">Configure</a>
             <a href="../appointment" class="item">Appointments</a>
             <a id="login" href="../" class="item">Log out</a>
