--- a/SelfStart/SelfStartFrontEnd/app/templates/components/view-schedule.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/view-schedule.hbs
@@ -4,7 +4,7 @@
   <form class="cd-form floating-labels" {{action "save" on="submit"}}>
     <br><br>
     <fieldset>
-      <legend>Book Appointment</legend>
+      <legend>Change Appointment Schedule</legend>
 
 
       <label class="cd-label">Select Physiotherapist</label>
@@ -24,92 +24,23 @@
       {{/each}}
     </fieldset>
   </form>
-  <button class="ui fluid negative button" {{action "prev"}}>previous</button>
-  <button class="ui fluid negative button" {{action "next"}}>next</button>
-  <div class="cd-schedule loading">
-    <div class="timeline">
-      <ul>
-        <li><span>09:00</span></li>
-        <li><span>09:30</span></li>
-        <li><span>10:00</span></li>
-        <li><span>10:30</span></li>
-        <li><span>11:00</span></li>
-        <li><span>11:30</span></li>
-        <li><span>12:00</span></li>
-        <li><span>12:30</span></li>
-        <li><span>13:00</span></li>
-        <li><span>13:30</span></li>
-        <li><span>14:00</span></li>
-        <li><span>14:30</span></li>
-        <li><span>15:00</span></li>
-        <li><span>15:30</span></li>
-        <li><span>16:00</span></li>
-        <li><span>16:30</span></li>
-        <li><span>17:00</span></li>
-        <li><span>17:30</span></li>
-        <li><span>18:00</span></li>
-      </ul>
-    </div>
-    <div class="events">
-      <ul>
-        {{#each weekdate as |date|}}
-          <li class="events-group">
-            <div class="top-info"><span>{{date}}</span></div>
-            <ul>
-              <li class="single-event" data-start="09:00" data-end="10:30" data-content="Open" data-event='{{event}}' {{action 'setslot' 1 date}}>
-                <a href="#0">
-                  <span class="event-date">  9  -  10:30</span>
-                  <em class="event-name">slot1</em>
-                </a>
-              </li>
-              <li class="single-event" value='1' data-start="10:30" data-end="12:00" data-content="Open" data-event='{{event}}' {{action 'setslot' 2 date}}>
-                <a href="#0">
-                  <span class="event-date">  10:30  -  12:00</span>
-                  <em class="event-name">slot2</em>
-                </a>
-              </li>
-              <li class="single-event" data-start="12:00" data-end="13:30" data-content="Open" data-event={{event}} {{action 'setslot' 3 date}}>
-                <a href="#0">
-                  <span class="event-date">  12:00  -  13:30</span>
-                  <em class="event-name">Slot3</em>
-                </a>
-              </li>
-              <li class="single-event" data-start="13:30" data-end="15:00" data-content="Open" data-event={{event}} {{action 'setslot' 4 date}}>
 
-                <a href="#0">
-                  <span class="event-date">  13:30  -  15:00</span>
-                  <em class="event-name">Slot4</em>
-                </a>
-              </li>
+  {{as-calendar
+    title="View Schedule"
+    occurrences=occurrences
+    defaultTimeZoneQuery="Toronto|New York"
+    dayStartingTime="8:00"
+    dayEndingTime="20:00"
+    timeSlotDuration="00:30"
+    onAddOccurrence=(action "calendarAddOccurrence")
+    onUpdateOccurrence=(action "calendarUpdateOccurrence")
+    onRemoveOccurrence=(action "calendarRemoveOccurrence")}}
 
-            </ul>
-          </li>
-        {{/each}}
-      </ul>
-    </div>
-
-    <div class="event-modal">
-      <header class="header">
-        <div class="content">
-          <span class="event-date"></span>
-          <h3 class="event-name"></h3>
-        </div>
-
-        <div class="header-bg"></div>
-      </header>
-
-      <div class="body">
-        <div class="event-info"></div>
-        <div class="body-bg"></div>
-      </div>
-
-      <a href="#0" class="close">Close</a>
-    </div>
-  </div>
 
   <button class="ui button" {{action 'save'}}>
     Save
   </button>
+
 {{else}}
   <button class="ui button" {{action 'viewschedule'}}>
     View schedule (physio)
