--- a/SelfStart/SelfStartFrontEnd/app/templates/components/add-patient.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/add-patient.hbs
@@ -94,7 +94,7 @@
           </div>
           <div class="icon">
             <label class="cd-label" for="cd-name">Unit</label>
-            {{input class="bookmark" type="text" value = apartment}}
+            {{input class="home" type="text" value = apartment}}
           </div>
 
           <div class="icon">
