--- a/SelfStart/SelfStartFrontEnd/app/templates/components/welcome-page.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/welcome-page.hbs
@@ -16,10 +16,12 @@
         <div class="ui hidden divider"></div>
         <div style="padding-left: 322px">
 
-          {{register-user}}
           <!--<a href="/appointment"  class="ui large inverted download button" >-->
             <!--Book Appointment-->
           <!--</a>-->
+          <a href="/register"class="ui large inverted download button">
+            Register
+          </a>
           <a href="/#"  class="ui large inverted basic button" >Ask a Physio</a>
         </div>
 
