--- a/SelfStart/SelfStartFrontEnd/app/templates/components/user-login.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/user-login.hbs
@@ -8,7 +8,7 @@
 
   <h2 class="ui fluid centered header">Login</h2>
 
-  <div id="ui container" style="height: 250px; padding-left:10%; padding-right: 10%; padding-top: 2%">
+  <div id="ui container" style="height: 250px; padding-left:5%; padding-right: 5%; padding-top: 2%">
   <form class="ui form">
 
     <div class="field">
@@ -22,8 +22,7 @@
     </div>
 
     <div class = "inline">
-      <button class="ui green button " {{action "submit"}}>Submit</button>
-      <button class="ui button " {{action "deny"}}>Cancel</button>
+      <button class="ui blue button " {{action "submit"}}>Submit</button>
     </div>
 
   </form>
