--- a/SelfStart/SelfStartFrontEnd/public/assets/css/form-style.css
+++ b/SelfStart/SelfStartFrontEnd/public/assets/css/form-style.css
@@ -29,9 +29,9 @@ Form
 
 -------------------------------- */
 .cd-form {
-  width: 90%;
-  max-width: 600px;
-  margin: 4em 14em 0em;
+  width: 100%;
+  /*max-width: 600px;*/
+  /*margin: 4em 14em 0em;*/
 }
 
 .cd-form::after {
@@ -45,7 +45,7 @@ Form
 .cd-form legend {
   padding-bottom: 10px;
   margin-bottom: 20px;
-  font-size: 1.4rem;
+  font-size: 1.25rem;
   border-bottom: 1px solid #ecf0f1;
 }
 .cd-form div {
@@ -69,12 +69,13 @@ Form
 
 .cd-form input[type="text"],
 .cd-form input[type="email"],
+.cd-form input[type="password"],
 .cd-form input[type="date"],
 .cd-form textarea,
 .cd-form select,
 .cd-form legend {
   display: block;
-  width: 60%;
+  width: 100%;
   -webkit-appearance: none;
   -moz-appearance: none;
   -ms-appearance: none;
@@ -83,6 +84,7 @@ Form
 }
 .cd-form input[type="text"],
 .cd-form input[type="email"],
+.cd-form input[type="password"],
 .cd-form input[type="date"],
 .cd-form textarea,
 .cd-form select {
@@ -95,6 +97,7 @@ Form
 }
 .cd-form input[type="text"]:focus,
 .cd-form input[type="email"]:focus,
+.cd-form input[type="password"]:focus,
 .cd-form input[type="date"]:focus,
 .cd-form textarea:focus,
 .cd-form select:focus {
@@ -112,7 +115,7 @@ Form
   content: '';
   position: absolute;
   z-index: 1;
-  right: 260px;
+  right: 23px;
   top: 55%;
   margin-top: -8px;
   display: block;
@@ -179,7 +182,7 @@ Form
   top: 50%;
   margin-top: -8px;
   width: 16px;
-  height: 12px;
+  height: 16px;
 }
 .cd-form input[type="radio"] + label::before,
 .cd-form input[type="checkbox"] + label::before {
@@ -298,10 +301,12 @@ Form
   }
   .cd-form input[type="text"],
   .cd-form input[type="email"],
+  .cd-form input[type="password"],
   .cd-form input[type="date"],
   .cd-form textarea,
   .cd-form select {
-    padding: 10px;
+    padding: 14px;
+    padding-left: 50px;
   }
 }
 
@@ -342,94 +347,100 @@ Form
 Custom icons
 
 -------------------------------- */
-.cd-form .icon input, .cd-form .icon select, .cd-form .icon textarea {
-  padding-left: 54px !important;
+
+
+button, input, optgroup, select, textarea {
+  line-height: 1.35;
 }
+
+/*.cd-form .icon input, .cd-form .icon select, .cd-form .icon textarea {*/
+  /*padding: 10px 10px;*/
+/*}*/
+
 .cd-form .user {
-  background: url('/assets/images/form/cd-icon-user.svg') no-repeat 12px 8px;
+  background: url('/assets/images/form/cd-icon-user.svg') no-repeat 12px 12px;
 }
 .cd-form [required].user {
-  background: url('/assets/images/form/cd-icon-user.svg') no-repeat 12px 8px, url('/assets/images/form/cd-required.svg') no-repeat top right;
+  background: url('/assets/images/form/cd-icon-user.svg') no-repeat 12px 12px, url('/assets/images/form/cd-required.svg') no-repeat top right;
 }
 
 .cd-form .lock {
-  background: url('/assets/images/form/lock.svg') no-repeat 12px 8px;
+  background: url('/assets/images/form/lock.svg') no-repeat 12px 12px;
 }
 .cd-form [required].lock {
-  background: url('/assets/images/form/lock.svg') no-repeat 12px 8px, url('/assets/images/form/cd-required.svg') no-repeat top right;
+  background: url('/assets/images/form/lock.svg') no-repeat 12px 12px, url('/assets/images/form/cd-required.svg') no-repeat top right;
 }
-
 .cd-form .company {
-  background: url('/assets/images/form/cd-icon-company.svg') no-repeat 12px 8px;
+  background: url('/assets/images/form/cd-icon-company.svg') no-repeat 12px 12px;
 }
 .cd-form [required].company {
-  background: url('/assets/images/form/cd-icon-company.svg') no-repeat 12px 8px, url('/assets/images/form/cd-required.svg') no-repeat top right;
+  background: url('/assets/images/form/cd-icon-company.svg') no-repeat 12px 12px, url('/assets/images/form/cd-required.svg') no-repeat top right;
 }
 .cd-form .email {
-  background: url('/assets/images/form/cd-icon-email.svg') no-repeat 12px 8px;
+  background: url('/assets/images/form/cd-icon-email.svg') no-repeat 12px 12px;
 }
 .cd-form [required].email {
-  background: url('/assets/images/form/cd-icon-email.svg') no-repeat 12px 8px, url('/assets/images/form/cd-required.svg') no-repeat top right;
+  background: url('/assets/images/form/cd-icon-email.svg') no-repeat 12px 12px, url('/assets/images/form/cd-required.svg') no-repeat top right;
 }
 .cd-form .budget {
-  background: url('/assets/images/form/cd-icon-budget.svg') no-repeat 12px 8px;
+  background: url('/assets/images/form/cd-icon-budget.svg') no-repeat 12px 12px;
 }
 .cd-form [required].budget {
-  background: url('/assets/images/form/cd-icon-budget.svg') no-repeat 12px 8px, url('/assets/images/form/cd-required.svg') no-repeat top right;
+  background: url('/assets/images/form/cd-icon-budget.svg') no-repeat 12px 12px, url('/assets/images/form/cd-required.svg') no-repeat top right;
 }
 .cd-form .message {
-  background: url('/assets/images/form/cd-icon-message.svg') no-repeat 12px 8px;
+  background: url('/assets/images/form/cd-icon-message.svg') no-repeat 12px 12px;
 }
 .cd-form [required].message {
-  background: url('/assets/images/form/cd-icon-message.svg') no-repeat 12px 8px, url('/assets/images/form/cd-required.svg') no-repeat top right;
+  background: url('/assets/images/form/cd-icon-message.svg') no-repeat 12px 12px, url('/assets/images/form/cd-required.svg') no-repeat top right;
 }
 .cd-form .date {
-  background: url('/assets/images/form/calendar-60.svg') no-repeat 12px 8px;
+  background: url('/assets/images/form/calendar-60.svg') no-repeat 12px 12px;
 }
 .cd-form [required].date {
-  background: url('/assets/images/form/calendar-60.svg') no-repeat 12px 8px, url('/assets/images/form/cd-required.svg') no-repeat top right;
+  background: url('/assets/images/form/calendar-60.svg') no-repeat 12px 12px, url('/assets/images/form/cd-required.svg') no-repeat top right;
 }
 .cd-form .card {
-  background: url('/assets/images/form/badge-13.svg') no-repeat 12px 8px;
+  background: url('/assets/images/form/badge-13.svg') no-repeat 12px 12px;
 }
 .cd-form [required].card {
-  background: url('/assets/images/form/badge-13.svg') no-repeat 12px 8px, url('/assets/images/form/cd-required.svg') no-repeat top right;
+  background: url('/assets/images/form/badge-13.svg') no-repeat 12px 12px, url('/assets/images/form/cd-required.svg') no-repeat top right;
 }
 .cd-form .home {
-  background: url('/assets/images/form/home-52.svg') no-repeat 12px 8px;
+  background: url('/assets/images/form/home-52.svg') no-repeat 12px 12px;
 }
 .cd-form [required].home {
-  background: url('/assets/images/form/home-52.svg') no-repeat 12px 8px, url('/assets/images/form/cd-required.svg') no-repeat top right;
+  background: url('/assets/images/form/home-52.svg') no-repeat 12px 12px, url('/assets/images/form/cd-required.svg') no-repeat top right;
 }
 .cd-form .bookmark {
-  background: url('/assets/images/form/bookmark-2.svg') no-repeat 12px 8px;
+  background: url('/assets/images/form/bookmark-2.svg') no-repeat 12px 12px;
 }
 .cd-form [required].bookmark {
-  background: url('/assets/images/form/bookmark-2.svg') no-repeat 12px 8px, url('/assets/images/form/cd-required.svg') no-repeat top right;
+  background: url('/assets/images/form/bookmark-2.svg') no-repeat 12px 12px, url('/assets/images/form/cd-required.svg') no-repeat top right;
 }
 .cd-form .flag {
-  background: url('/assets/images/form/flag-points-32.svg') no-repeat 12px 8px;
+  background: url('/assets/images/form/flag-points-32.svg') no-repeat 12px 12px;
 }
 .cd-form [required].flag {
-  background: url('/assets/images/form/flag-points-32.svg') no-repeat 12px 8px, url('/assets/images/form/cd-required.svg') no-repeat top right;
+  background: url('/assets/images/form/flag-points-32.svg') no-repeat 12px 12px, url('/assets/images/form/cd-required.svg') no-repeat top right;
 }
 .cd-form .phone {
-  background: url('/assets/images/form/phone-2.svg') no-repeat 12px 8px;
+  background: url('/assets/images/form/phone-2.svg') no-repeat 12px 12px;
 }
 .cd-form [required].phone {
-  background: url('/assets/images/form/phone-2.svg') no-repeat 12px 8px, url('/assets/images/form/cd-required.svg') no-repeat top right;
+  background: url('/assets/images/form/phone-2.svg') no-repeat 12px 12px, url('/assets/images/form/cd-required.svg') no-repeat top right;
 }
 .cd-form .world {
-  background: url('/assets/images/form/world.svg') no-repeat 12px 8px;
+  background: url('/assets/images/form/world.svg') no-repeat 12px 12px;
 }
 .cd-form [required].world {
-  background: url('/assets/images/form/world.svg') no-repeat 12px 8px, url('/assets/images/form/cd-required.svg') no-repeat top right;
+  background: url('/assets/images/form/world.svg') no-repeat 12px 12px, url('/assets/images/form/cd-required.svg') no-repeat top right;
 }
 .cd-form .people {
-  background: url('/assets/images/form/multiple-11.svg') no-repeat 12px 8px;
+  background: url('/assets/images/form/multiple-11.svg') no-repeat 12px 12px;
 }
 .cd-form [required].people {
-  background: url('/assets/images/form/multiple-11.svg') no-repeat 12px 8px, url('/assets/images/form/cd-required.svg') no-repeat top right;
+  background: url('/assets/images/form/multiple-11.svg') no-repeat 12px 12px, url('/assets/images/form/cd-required.svg') no-repeat top right;
 }
 
 .cd-form .star {
